--- a/conjure-cli/pom.xml
+++ b/conjure-cli/pom.xml
@@ -17,14 +17,24 @@
 	<dependencies>
 
 		<dependency>
+			<groupId>org.codehaus.groovy</groupId>
+			<artifactId>groovy-all</artifactId>
+		</dependency>
+
+		<dependency>
 			<groupId>org.aksw.jena-sparql-api</groupId>
 			<artifactId>jena-sparql-api-conjure</artifactId>
 		</dependency>
 
-                        <dependency>
-                                <groupId>com.beust</groupId>
-                                <artifactId>jcommander</artifactId>
-                        </dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-autoconfigure</artifactId>
+		</dependency>
+
+		<dependency>
+			<groupId>com.beust</groupId>
+			<artifactId>jcommander</artifactId>
+		</dependency>
 
 		<dependency>
 			<groupId>org.slf4j</groupId>
