--- a/pom.xml
+++ b/pom.xml
@@ -175,18 +175,18 @@
 						<target>${maven.compiler.target}</target>
 						<encoding>${project.build.sourceEncoding}</encoding>
 					</configuration>
-					<executions>
-						<execution>
-							<id>test-compile</id>
-							<phase>process-test-sources</phase>
-							<goals>
-								<goal>testCompile</goal>
-							</goals>
-							<configuration>
-								<compilerId>groovy-eclipse-compiler</compilerId>
-							</configuration>
-						</execution>
-					</executions>
+<!-- 					<executions> -->
+<!-- 						<execution> -->
+<!-- 							<id>test-compile</id> -->
+<!-- 							<phase>process-test-sources</phase> -->
+<!-- 							<goals> -->
+<!-- 								<goal>testCompile</goal> -->
+<!-- 							</goals> -->
+<!-- 							<configuration> -->
+<!-- 								<compilerId>groovy-eclipse-compiler</compilerId> -->
+<!-- 							</configuration> -->
+<!-- 						</execution> -->
+<!-- 					</executions> -->
 					<dependencies>
 						<dependency>
 							<groupId>org.codehaus.groovy</groupId>
