--- a/conjure-cli/src/main/resources/log4j.properties
+++ b/conjure-cli/src/main/resources/log4j.properties
@@ -21,7 +21,7 @@ log4j.rootLogger=debug, stderr
 
 #log4j.logger.Jena = off
 #log4j.logger.org.apache.jena = info
-#log4j.logger.org.apache.http = info
+log4j.logger.org.apache.http = info
 #log4j.logger.org.apache.qpid = info
 #
 #log4j.logger.org.aksw.jena_sparql_api.core.utils = off
