--- a/pom.xml
+++ b/pom.xml
@@ -131,7 +131,7 @@
 			<dependency>
 				<groupId>com.beust</groupId>
 				<artifactId>jcommander</artifactId>
-				<version>1.72</version>
+				<version>1.78</version>
 			</dependency>
 
 			<dependency>
@@ -148,6 +148,29 @@
 
 		</dependencies>
 	</dependencyManagement>
+
+
+	<reporting>
+		<plugins>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-site-plugin</artifactId>
+				<version>3.6</version>
+				<configuration>
+					<reportPlugins>
+						<plugin>
+							<artifactId>maven-project-info-reports-plugin</artifactId>
+							<version>2.9</version>
+						</plugin>
+						<plugin>
+							<groupId>net.alchim31.maven</groupId>
+							<artifactId>scala-maven-plugin</artifactId>
+						</plugin>
+					</reportPlugins>
+				</configuration>
+			</plugin>
+		</plugins>
+	</reporting>
 
 
 	<build>
@@ -184,10 +207,20 @@
 				<plugin>
 					<groupId>com.amashchenko.maven.plugin</groupId>
 					<artifactId>gitflow-maven-plugin</artifactId>
-					<version>1.8.0</version>
+					<version>1.13.0</version>
 					<configuration>
+						<installProject>false</installProject>
+						<pushRemote>false</pushRemote>
 						<gitFlowConfig>
 							<versionTagPrefix>v</versionTagPrefix>
+							<!-- These values should be defaults -->
+							<!-- <productionBranch>master</productionBranch> -->
+							<!-- <developmentBranch>develop</developmentBranch> -->
+							<!-- <featureBranchPrefix>feature/</featureBranchPrefix> -->
+							<!-- <releaseBranchPrefix>release/</releaseBranchPrefix> -->
+							<!-- <hotfixBranchPrefix>hotfix/</hotfixBranchPrefix> -->
+							<!-- <supportBranchPrefix>support/</supportBranchPrefix> -->
+							<!-- <origin>origin</origin> -->
 						</gitFlowConfig>
 					</configuration>
 				</plugin>
