--- a/conjure-cli-native/src/main/resources/log4j.properties
+++ b/conjure-cli-native/src/main/resources/log4j.properties
@@ -14,7 +14,7 @@ log4j.appender.stderr.layout.ConversionPattern=%d [%t] %-5p %c: %m%n
 #log4j.appender.stderr.layout.ConversionPattern=%d [%t] %-5p %c{1.}: %m%n
 
 
-log4j.rootLogger=debug, stderr
+log4j.rootLogger=info, stderr
 
 #log4j.logger.org.aksw.jena_sparql_api.compare.QueryExecutionCompare = on
 
