--- a/conjure-cli-spark/pom.xml
+++ b/conjure-cli-spark/pom.xml
@@ -36,20 +36,32 @@
 
 	<dependencies>
 		<dependency>
-			<groupId>com.fasterxml.jackson.core</groupId>
-			<artifactId>jackson-core</artifactId>
+			<groupId>org.apache.jena</groupId>
+			<artifactId>jena-arq</artifactId>
+			<version>${jena.version}</version>
+
+			<exclusions>
+				<exclusion>
+					<groupId>com.fasterxml.jackson.core</groupId>
+					<artifactId>jackson-core</artifactId>
+				</exclusion>
+
+				<exclusion>
+					<groupId>com.fasterxml.jackson.core</groupId>
+					<artifactId>jackson-databind</artifactId>
+				</exclusion>
+				<exclusion>
+					<groupId>com.fasterxml.jackson.core</groupId>
+					<artifactId>jackson-annotations</artifactId>
+				</exclusion>
+			</exclusions>
 		</dependency>
 
-		<dependency>
-			<groupId>com.fasterxml.jackson.core</groupId>
-			<artifactId>jackson-databind</artifactId>
-		</dependency>
 
-		<dependency>
-			<groupId>com.fasterxml.jackson.core</groupId>
-			<artifactId>jackson-annotations</artifactId>
-		</dependency>
-
+		<!-- <dependency> <groupId>com.fasterxml.jackson.core</groupId> <artifactId>jackson-core</artifactId> 
+			</dependency> <dependency> <groupId>com.fasterxml.jackson.core</groupId> 
+			<artifactId>jackson-databind</artifactId> </dependency> <dependency> <groupId>com.fasterxml.jackson.core</groupId> 
+			<artifactId>jackson-annotations</artifactId> </dependency> -->
 
 		<!-- <dependency> -->
 		<!-- <groupId>org.apache.spark</groupId> -->
@@ -104,43 +116,43 @@
 			<version>0.41</version>
 		</dependency>
 
-		<dependency>
-			<groupId>org.apache.jena</groupId>
-			<artifactId>jena-arq</artifactId>
-			<version>${jena.version}</version>
-		</dependency>
+<!-- 		<dependency> -->
+<!-- 			<groupId>org.apache.jena</groupId> -->
+<!-- 			<artifactId>jena-arq</artifactId> -->
+<!-- 			<version>${jena.version}</version> -->
+<!-- 		</dependency> -->
 
-		<dependency>
-			<groupId>org.apache.jena</groupId>
-			<artifactId>jena-core</artifactId>
-			<version>${jena.version}</version>
-		</dependency>
+		<!-- <dependency> -->
+		<!-- <groupId>org.apache.jena</groupId> -->
+		<!-- <artifactId>jena-core</artifactId> -->
+		<!-- <version>${jena.version}</version> -->
+		<!-- </dependency> -->
 
-		<dependency>
-			<groupId>org.apache.jena</groupId>
-			<artifactId>jena-fuseki-server</artifactId>
-			<version>${jena.version}</version>
-		</dependency>
+		<!-- <dependency> -->
+		<!-- <groupId>org.apache.jena</groupId> -->
+		<!-- <artifactId>jena-fuseki-server</artifactId> -->
+		<!-- <version>${jena.version}</version> -->
+		<!-- </dependency> -->
 
 
-		<dependency>
-			<groupId>org.apache.jena</groupId>
-			<artifactId>jena-tdb</artifactId>
-			<version>${jena.version}</version>
-		</dependency>
+		<!-- <dependency> -->
+		<!-- <groupId>org.apache.jena</groupId> -->
+		<!-- <artifactId>jena-tdb</artifactId> -->
+		<!-- <version>${jena.version}</version> -->
+		<!-- </dependency> -->
 
-		<dependency>
-			<groupId>org.apache.jena</groupId>
-			<artifactId>apache-jena-libs</artifactId>
-			<type>pom</type>
-			<version>${jena.version}</version>
-		</dependency>
+		<!-- <dependency> -->
+		<!-- <groupId>org.apache.jena</groupId> -->
+		<!-- <artifactId>apache-jena-libs</artifactId> -->
+		<!-- <type>pom</type> -->
+		<!-- <version>${jena.version}</version> -->
+		<!-- </dependency> -->
 
-		<dependency>
-			<groupId>com.google.guava</groupId>
-			<artifactId>guava</artifactId>
-			<version>27.0.1-jre</version>
-		</dependency>
+		<!-- <dependency> -->
+		<!-- <groupId>com.google.guava</groupId> -->
+		<!-- <artifactId>guava</artifactId> -->
+		<!-- <version>27.0.1-jre</version> -->
+		<!-- </dependency> -->
 
 		<dependency>
 			<groupId>org.aksw.jena-sparql-api</groupId>
@@ -159,22 +171,22 @@
 			<version>${jsa.version}</version>
 		</dependency>
 
-		<dependency>
-			<groupId>org.aksw.jena-sparql-api</groupId>
-			<artifactId>jena-sparql-api-virtuoso</artifactId>
-			<version>${jsa.version}</version>
-		</dependency>
+		<!-- <dependency> -->
+		<!-- <groupId>org.aksw.jena-sparql-api</groupId> -->
+		<!-- <artifactId>jena-sparql-api-virtuoso</artifactId> -->
+		<!-- <version>${jsa.version}</version> -->
+		<!-- </dependency> -->
 
 		<!-- <dependency> <groupId>org.aksw.jena-sparql-api</groupId> <artifactId>jena-sparql-api-server-standalone</artifactId> 
 			<version>${jsa.version}</version> </dependency> <dependency> <groupId>org.aksw.jena-sparql-api</groupId> 
 			<artifactId>jena-sparql-api-algebra</artifactId> <version>${jsa.version}</version> 
 			</dependency> -->
 
-		<dependency>
-			<groupId>org.aksw.jena-sparql-api</groupId>
-			<artifactId>jena-sparql-api-views</artifactId>
-			<version>${jsa.version}</version>
-		</dependency>
+		<!-- <dependency> -->
+		<!-- <groupId>org.aksw.jena-sparql-api</groupId> -->
+		<!-- <artifactId>jena-sparql-api-views</artifactId> -->
+		<!-- <version>${jsa.version}</version> -->
+		<!-- </dependency> -->
 	</dependencies>
 
 	<build>
