--- a/conjure-cli-native/src/main/resources/log4j.properties
+++ b/conjure-cli-native/src/main/resources/log4j.properties
@@ -20,10 +20,13 @@ log4j.rootLogger=debug, stderr
 
 
 #log4j.logger.Jena = off
-log4j.logger.org.apache.jena.shared = warn
-log4j.logger.org.apache.jena.riot.system.stream = warn
+log4j.logger.org.apache.jena = warn
+#log4j.logger.org.apache.jena.shared = warn
+#log4j.logger.org.apache.jena.riot.system.stream = warn
 log4j.logger.org.aksw.jena_sparql_api.mapper.proxy = warn
 log4j.logger.org.apache.http = info
+log4j.logger.org.springframework = warn
+
 
 #log4j.logger.org.apache.qpid = info
 #
