--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,7 @@
 	<url>https://github.com/SmartDataAnalytics/Conjure</url>
 
 	<modules>
+		<module>conjure-datasources</module>
 		<module>conjure-cli-native</module>
 		<module>conjure-cli-spark</module>
 		<module>conjure-debian-cli</module>
@@ -53,13 +54,18 @@
 	</developers>
 
 	<properties>
-		<jena.version>3.14.0</jena.version>
-		<jena-sparql-api.subversion>1-SNAPSHOT</jena-sparql-api.subversion>
+		<jena.version>4.3.1</jena.version>
+		<jenax.version>4.3.1-1-SNAPSHOT</jenax.version>
 
-		<jena-sparql-api.version>${jena.version}-${jena-sparql-api.subversion}</jena-sparql-api.version>
+		<sansa.version>0.8.0-RC2-SNAPSHOT</sansa.version>
+		<difs.version>1.0.0-SNAPSHOT</difs.version>
+		<slf4j.version>1.8.0-beta4</slf4j.version>
+		<log4j.version>2.16.0</log4j.version>
 
+		<junit.version>4.13</junit.version>
 		<spring-boot.version>2.2.1.RELEASE</spring-boot.version>
 
+<!--
 		<scala.version>2.11.12</scala.version>
 		<scala.binary.version>2.11</scala.binary.version>
 		<scala.classifier>${scala.binary.version}</scala.classifier>
@@ -67,11 +73,10 @@
 
 		<spark.version>2.4.3</spark.version>
 		<hadoop.version>2.9.2</hadoop.version>
-
+-->
 
 		<!-- Project Settings -->
-		<maven.compiler.source>1.8</maven.compiler.source>
-		<maven.compiler.target>1.8</maven.compiler.target>
+		<maven.compiler.release>11</maven.compiler.release>
 		<java.version.javadoc>http://java.sun.com/javase/8/docs/api/</java.version.javadoc>
 		<file.encoding>UTF-8</file.encoding>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -82,40 +87,62 @@
 
 	<dependencyManagement>
 		<dependencies>
-
+<!--
 			<dependency>
 				<groupId>org.apache.jena</groupId>
 				<artifactId>jena-arq</artifactId>
 				<version>${jena.version}</version>
 			</dependency>
+-->
+
+
+                <dependency>
+                        <groupId>org.aksw.jenax</groupId>
+                        <artifactId>jenax-arq-connection-core</artifactId>
+			<version>${jenax.version}</version>
+                </dependency>
+
+                <dependency>
+                        <groupId>org.aksw.jenax</groupId>
+                        <artifactId>jenax-arq-plugins-service-vfs</artifactId>
+			<version>${jenax.version}</version>
+                </dependency>
+
+
+			<dependency>
+				<groupId>org.aksw.difs</groupId>
+				<artifactId>difs-system</artifactId>
+				<version>${difs.version}</version>
+			</dependency>
+
+			<dependency>
+				<groupId>net.sansa-stack</groupId>
+				<artifactId>sansa-spark-jena-java_2.12</artifactId>
+				<version>${sansa.version}</version>
+				<exclusions>
+					<exclusion>
+						<groupId>log4j</groupId>
+						<artifactId>log4j</artifactId>
+					</exclusion>
+					<exclusion>
+						<groupId>org.slf4j</groupId>
+						<artifactId>slf4j-log4j12</artifactId>
+					</exclusion>
+				</exclusions>
+			</dependency>
+
+			<dependency>
+				<groupId>org.apache.jena</groupId>
+				<artifactId>jena-tdb2</artifactId>
+				<version>${jena.version}</version>
+			</dependency>
+
 
 			<!-- <dependency> <groupId>com.fasterxml.jackson.core</groupId> <artifactId>jackson-core</artifactId> 
 				<version>2.6.7</version> </dependency> <dependency> <groupId>com.fasterxml.jackson.core</groupId> 
 				<artifactId>jackson-databind</artifactId> <version>2.6.7</version> </dependency> 
 				<dependency> <groupId>com.fasterxml.jackson.core</groupId> <artifactId>jackson-annotations</artifactId> 
 				<version>2.6.7</version> </dependency> -->
-
-			<!-- SPARK -->
-			<dependency>
-				<groupId>org.apache.spark</groupId>
-				<artifactId>spark-core_${scala.binary.version}</artifactId>
-				<version>${spark.version}</version>
-				<!-- Experimental exclusions ~ Claus, 5.1 -->
-				<exclusions>
-					<exclusion>
-						<groupId>javax.ws.rs</groupId>
-						<artifactId>javax.ws.rs-api</artifactId>
-					</exclusion>
-				</exclusions>
-			</dependency>
-
-			<dependency>
-				<groupId>org.apache.spark</groupId>
-				<artifactId>spark-sql_${scala.binary.version}</artifactId>
-				<version>${spark.version}</version>
-			</dependency>
-
-
 
 			<dependency>
 				<groupId>org.springframework.boot</groupId>
@@ -131,9 +158,9 @@
 
 
 			<dependency>
-				<groupId>org.aksw.jena-sparql-api</groupId>
-				<artifactId>jena-sparql-api-conjure</artifactId>
-				<version>${jena-sparql-api.version}</version>
+				<groupId>org.aksw.jenax</groupId>
+				<artifactId>jenax-conjure-core</artifactId>
+				<version>${jenax.version}</version>
 			</dependency>
 
 			<dependency>
@@ -143,21 +170,21 @@
 			</dependency>
 
 			<dependency>
-				<groupId>com.beust</groupId>
-				<artifactId>jcommander</artifactId>
-				<version>1.78</version>
+				<groupId>org.apache.logging.log4j</groupId>
+				<artifactId>log4j-slf4j18-impl</artifactId>
+				<version>${log4j.version}</version>
 			</dependency>
 
 			<dependency>
 				<groupId>org.slf4j</groupId>
-				<artifactId>slf4j-log4j12</artifactId>
-				<version>1.7.25</version>
+				<artifactId>slf4j-api</artifactId>
+				<version>${slf4j.version}</version>
 			</dependency>
 
 			<dependency>
 				<groupId>junit</groupId>
 				<artifactId>junit</artifactId>
-				<version>4.12</version>
+				<version>${junit.version}</version>
 			</dependency>
 
 		</dependencies>
@@ -176,10 +203,12 @@
 							<artifactId>maven-project-info-reports-plugin</artifactId>
 							<version>2.9</version>
 						</plugin>
+<!--
 						<plugin>
 							<groupId>net.alchim31.maven</groupId>
 							<artifactId>scala-maven-plugin</artifactId>
 						</plugin>
+-->
 					</reportPlugins>
 				</configuration>
 			</plugin>
@@ -242,11 +271,10 @@
 				<plugin>
 					<groupId>org.apache.maven.plugins</groupId>
 					<artifactId>maven-compiler-plugin</artifactId>
-					<version>3.6.0</version>
+					<version>3.8.1</version>
 					<configuration>
-						<source>${maven.compiler.source}</source>
-						<target>${maven.compiler.target}</target>
-						<encoding>${project.build.sourceEncoding}</encoding>
+						<release>${maven.compiler.release}</release>
+						<!-- <encoding>${project.build.sourceEncoding}</encoding> -->
 					</configuration>
 					<!-- <executions> -->
 					<!-- <execution> -->
@@ -478,13 +506,13 @@
 		<repository>
 			<id>maven.aksw.internal</id>
 			<name>University Leipzig, AKSW Maven2 Internal Repository</name>
-			<url>http://maven.aksw.org/repository/internal/</url>
+			<url>https://maven.aksw.org/repository/internal/</url>
 		</repository>
 
 		<repository>
 			<id>maven.aksw.snapshots</id>
 			<name>University Leipzig, AKSW Maven2 Snapshot Repository</name>
-			<url>http://maven.aksw.org/repository/snapshots/</url>
+			<url>https://maven.aksw.org/repository/snapshots/</url>
 		</repository>
 	</repositories>
 
