--- a/pom.xml
+++ b/pom.xml
@@ -531,7 +531,7 @@
 		<snapshotRepository>
 			<id>maven.aksw.snapshots</id>
 			<name>AKSW Snapshot Repository</name>
-			<url>http://maven.aksw.org/repository/snapshots</url>
+			<url>https://maven.aksw.org/repository/snapshots</url>
 		</snapshotRepository>
 
 	</distributionManagement>
