--- a/conjure-datasources/pom.xml
+++ b/conjure-datasources/pom.xml
@@ -25,8 +25,8 @@
 		</dependency>
 
 		<dependency>
-			<groupId>org.aksw.difs</groupId>
-			<artifactId>difs-system</artifactId>
+			<groupId>org.aksw.jenax</groupId>
+			<artifactId>jenax-fsrdfstore-system</artifactId>
 		</dependency>
 
 		<dependency>
