--- a/conjure-debian-cli/pom.xml
+++ b/conjure-debian-cli/pom.xml
@@ -7,7 +7,7 @@
 	<parent>
 		<groupId>org.aksw.conjure</groupId>
 		<artifactId>conjure-parent</artifactId>
-		<version>1.0.1-SNAPSHOT</version>
+		<version>4.6.0-1-SNAPSHOT</version>
 	</parent>
 
 	<artifactId>conjure-debian-cli</artifactId>
