--- a/pom.xml
+++ b/pom.xml
@@ -83,15 +83,9 @@
 			<!-- <dependency> <groupId>org.apache.jena</groupId> <artifactId>jena-arq</artifactId> 
 				<version>${jena.version}</version> </dependency> -->
 
-				<!--
-			<dependency>
-				<groupId>org.aksw.jenax</groupId>
-				<artifactId>jenax-bom</artifactId>
-				<version>${jenax.version}</version>
-				<type>pom</type>
-				<scope>import</scope>
-					</dependency>
-				-->
+			<!-- <dependency> <groupId>org.aksw.jenax</groupId> <artifactId>jenax-bom</artifactId> 
+				<version>${jenax.version}</version> <type>pom</type> <scope>import</scope> 
+				</dependency> -->
 
 
 			<!-- <dependency> <groupId>org.aksw.jenax</groupId> <artifactId>jenax-arq-connection-core</artifactId> 
@@ -115,25 +109,24 @@
 						<artifactId>slf4j-log4j12</artifactId>
 					</exclusion>
 					<exclusion>
-                                                <groupId>ch.qos.reload4j</groupId>
-                                                <artifactId>reload4j</artifactId>
-                                        </exclusion>
-                                        <exclusion>
-                                                <groupId>org.slf4j</groupId>
-                                                <artifactId>slf4j-reload4j</artifactId>
-                                        </exclusion>
+						<groupId>ch.qos.reload4j</groupId>
+						<artifactId>reload4j</artifactId>
+					</exclusion>
+					<exclusion>
+						<groupId>org.slf4j</groupId>
+						<artifactId>slf4j-reload4j</artifactId>
+					</exclusion>
 
 				</exclusions>
 			</dependency>
 
 			<dependency>
-                                <groupId>org.aksw.jenax</groupId>
-                                <artifactId>jenax-bom</artifactId>
-                                <version>${jenax.version}</version>
-                                <type>pom</type>
-                                <scope>import</scope>
-                        </dependency>
-
+				<groupId>org.aksw.jenax</groupId>
+				<artifactId>jenax-bom</artifactId>
+				<version>${jenax.version}</version>
+				<type>pom</type>
+				<scope>import</scope>
+			</dependency>
 
 			<dependency>
 				<groupId>org.apache.jena</groupId>
