--- a/pom.xml
+++ b/pom.xml
@@ -54,7 +54,7 @@
 	</developers>
 
 	<properties>
-		<jena.version>4.8.0-SNAPSHOT</jena.version>
+		<jena.version>4.8.0</jena.version>
 		<jenax.version>4.8.0-1-SNAPSHOT</jenax.version>
 
 		<sansa.version>0.8.0-RC3-SNAPSHOT</sansa.version>
