--- a/conjure-cli-spark/pom.xml
+++ b/conjure-cli-spark/pom.xml
@@ -180,8 +180,12 @@
 				</exclusion>
 			</exclusions>
 		</dependency>
+        <dependency>
+            <groupId>org.aksw.jenax</groupId>
+            <artifactId>jenax-io-json</artifactId>
+        </dependency>
 
-	</dependencies>
+    </dependencies>
 
 	<profiles>
 		<profile>
