--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 
 	<groupId>org.aksw.conjure</groupId>
 	<artifactId>conjure-parent</artifactId>
-	<version>4.8.0-1-SNAPSHOT</version>
+	<version>4.8.0-2</version>
 
 	<packaging>pom</packaging>
 
