--- a/conjure-datasources/pom.xml
+++ b/conjure-datasources/pom.xml
@@ -10,7 +10,7 @@
 	<parent>
 		<groupId>org.aksw.conjure</groupId>
 		<artifactId>conjure-parent</artifactId>
-		<version>4.8.0-2</version>
+		<version>4.8.0-3-SNAPSHOT</version>
 	</parent>
 
 	<dependencies>
