--- a/pom.xml
+++ b/pom.xml
@@ -55,9 +55,9 @@
 
 	<properties>
 		<jena.version>4.8.0</jena.version>
-		<jenax.version>4.8.0-2</jenax.version>
+		<jenax.version>4.8.0-3-SNAPSHOT</jenax.version>
 
-		<sansa.version>0.8.7</sansa.version>
+		<sansa.version>0.8.8-SNAPSHOT</sansa.version>
 		<slf4j.version>1.7.36</slf4j.version>
 		<log4j.version>2.18.0</log4j.version>
 
