--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 
 	<groupId>org.aksw.conjure</groupId>
 	<artifactId>conjure-parent</artifactId>
-	<version>4.9.0-1-SNAPSHOT</version>
+	<version>5.0.0-1-SNAPSHOT</version>
 
 	<packaging>pom</packaging>
 
@@ -54,10 +54,10 @@
 	</developers>
 
 	<properties>
-		<jena.version>4.9.0</jena.version>
-		<jenax.version>4.9.0-1-SNAPSHOT</jenax.version>
+		<jena.version>5.0.0-SNAPSHOT</jena.version>
+		<jenax.version>5.0.0-1-SNAPSHOT</jenax.version>
 
-		<sansa.version>0.9.0-SNAPSHOT</sansa.version>
+		<sansa.version>0.9.5-SNAPSHOT</sansa.version>
 		<slf4j.version>1.7.36</slf4j.version>
 		<log4j.version>2.18.0</log4j.version>
 
