--- a/pom.xml
+++ b/pom.xml
@@ -58,8 +58,8 @@
 		<jenax.version>5.0.0-1-SNAPSHOT</jenax.version>
 
 		<sansa.version>0.9.5-SNAPSHOT</sansa.version>
-		<slf4j.version>1.7.36</slf4j.version>
-		<log4j.version>2.18.0</log4j.version>
+		<slf4j.version>2.0.9</slf4j.version>
+		<log4j.version>2.21.0</log4j.version>
 
 		<junit.version>4.13</junit.version>
 		<spring-boot.version>2.2.1.RELEASE</spring-boot.version>
@@ -171,17 +171,21 @@
 			</dependency>
 
 			<dependency>
-				<groupId>org.apache.logging.log4j</groupId>
-				<artifactId>log4j-slf4j18-impl</artifactId>
-				<version>${log4j.version}</version>
+				<groupId>org.slf4j</groupId>
+				<artifactId>slf4j-bom</artifactId>
+				<version>${slf4j.version}</version>
+				<scope>import</scope>
+				<type>pom</type>
 			</dependency>
 
 			<dependency>
-				<groupId>org.slf4j</groupId>
-				<artifactId>slf4j-api</artifactId>
-				<version>${slf4j.version}</version>
+				<groupId>org.apache.logging.log4j</groupId>
+				<artifactId>log4j-bom</artifactId>
+				<version>${log4j.version}</version>
+				<scope>import</scope>
+				<type>pom</type>
 			</dependency>
-
+			
 			<dependency>
 				<groupId>junit</groupId>
 				<artifactId>junit</artifactId>
